# langchain-database-description-application

./: .envrc  .gitignore  .justfile  README.md  pyproject.toml
datamodel/: customer.txt
src/: code.py
